# my_grafana_mcp_server

./: README.md  pyproject.toml  server.py
.joycode/: prompt.json
src/shiqi_grafana_chart_mcp/: __init__.py
